--- a/stylesheet2_todo.css
+++ b/stylesheet2_todo.css
@@ -1,11 +1,7 @@
 /* Feuille de style de niveau 1 */
 
 /* Structure */
-#batman{
 
-
-   
-}
 body 
 { 
    margin: 10px;
@@ -149,7 +145,7 @@ textarea
 
 body 
 { 
-   background-image: url(img/fond.jpg); 
+   background-image: url(fond.jpg); 
    background-repeat: repeat;
    /*background-position: left;*/
    font-family: Arial;    
